intel/bench_214_work/extr_.linuxdriversttyserialip22zilog.c_ip22zilog_convert_to_zs_with_main/log.txt
bench_214_work/extr_.linuxdriversttyserialip22zilog.c_ip22zilog_convert_to_zs_with_main/extr_.linuxdriversttyserialip22zilog.c_ip22zilog_convert_to_zs_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
